--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   page_slider: ^0.0.2
+  flutter_native_splash: ^1.1.5+1
 
 dev_dependencies:
   flutter_test:
